Fixed alignment in code.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -15,20 +15,18 @@
         margin-left: 1.6%;
     }
 
-.content {
-    font: 800 14.5em/1  'Open Sans', Impact; }
+    .content {
+        font: 800 14.5em/1  'Open Sans', Impact; 
+    }
 
-svg {
-    width: 50%;
-    margin: 0 auto 50px;
-    display: block;
-    text-transform: uppercase;
-}
+    svg {
+        width: 50%;
+        margin: 0 auto 50px;
+        display: block;
+        text-transform: uppercase;
+    }
 
-* {
-    margin: 0;
-    padding: 0;
-}
+
     #joke {
         display: none;
         visibility: hidden;
